// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rejected queue renders rejected queue with comments 1`] = `
<div
  className="MainLayout-root"
  data-testid="moderate-main-container"
>
  <main
    className="Moderate-main"
  >
    <div
      className="Box-root HorizontalGutter-root Queue-root HorizontalGutter-double"
    >
      <div
        className="Card-root ModerateCard-root"
        data-testid="moderate-comment-comment-0"
      >
        <div
          className="Box-root Flex-root Flex-flex"
        >
          <div
            className="ModerateCard-mainContainer"
          >
            <div
              className="ModerateCard-topBar"
            >
              <div>
                <span
                  className="Box-root Typography-root Typography-heading4 Typography-colorTextPrimary ModerateCard-username Username-root"
                >
                  Isabelle
                </span>
                <time
                  className="Timestamp-root RelativeTime-root"
                  dateTime="2018-07-06T18:24:00.000Z"
                  title="2018-07-06T18:24:00.000Z"
                >
                  2018-07-06T18:24:00.000Z
                </time>
                <button
                  className="BaseButton-root FeatureButton-root"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span>
                    Feature
                  </span>
                </button>
              </div>
            </div>
            <div
              className="Box-root Typography-root Typography-bodyCopy Typography-colorTextPrimary ModerateCard-content CommentContent-root"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "This is the last random sentence I will be writing and I am going to stop mid-sent",
                }
              }
            />
            <div
              className="ModerateCard-footer"
            >
              <div
                className="Box-root HorizontalGutter-root HorizontalGutter-full"
              >
                <div>
                  <a
                    className="TextLink-root ModerateCard-link"
                    href="http://localhost/comment/0"
                    target="_blank"
                  >
                    View Context
                    <span
                      aria-hidden="true"
                      className="Icon-root Icon-xs TextLink-icon"
                    >
                      open_in_new
                    </span>
                  </a>
                </div>
                <div>
                  <span
                    className="ModerateCard-story"
                  >
                    Story
                  </span>
                  :
                  <span
                    className="ModerateCard-storyTitle"
                  >
                    Finally a Cure for Cancer
                  </span>

                  <a
                    className="TextLink-root ModerateCard-link"
                    href="/admin/moderate/story-1"
                    onClick={[Function]}
                  >
                    Moderate Story
                  </a>
                </div>
                <div
                  className="Box-root HorizontalGutter-root HorizontalGutter-double"
                >
                  <div
                    className="Box-root Flex-root Flex-flex"
                  >
                    <div
                      className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
                    >
                      <span
                        className="Marker-root Marker-colorError Marker-variantRegular"
                      >
                        <span>
                          Spam
                        </span>

                        <span
                          className="Count-root"
                        >
                          2
                        </span>
                      </span>
                    </div>
                    <button
                      aria-controls="uuid-0"
                      aria-expanded={false}
                      className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Markers-detailsButtonColorRegular Button-variantRegular Markers-detailsButton"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      type="button"
                    >
                      <span
                        className="Markers-detailsText"
                      >
                        Details
                      </span>
                      <span
                        aria-hidden="true"
                        className="Icon-root Icon-sm"
                      >
                        arrow_drop_down
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ModerateCard-separator"
          />
          <div
            className="Box-root Flex-root ModerateCard-aside ModerateCard-asideWithoutReplyTo Flex-flex Flex-itemGutter Flex-alignCenter Flex-directionColumn gutter"
          >
            <div
              className="ModerateCard-decision"
            >
              Decision
            </div>
            <div
              className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
            >
              <button
                aria-label="Reject"
                className="BaseButton-root RejectButton-root RejectButton-invert"
                disabled={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-lg RejectButton-icon"
                >
                  close
                </span>
              </button>
              <button
                aria-label="Approve"
                className="BaseButton-root ApproveButton-root"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-lg ApproveButton-icon"
                >
                  done
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="Card-root ModerateCard-root"
        data-testid="moderate-comment-comment-1"
      >
        <div
          className="Box-root Flex-root Flex-flex"
        >
          <div
            className="ModerateCard-mainContainer"
          >
            <div
              className="ModerateCard-topBar"
            >
              <div>
                <span
                  className="Box-root Typography-root Typography-heading4 Typography-colorTextPrimary ModerateCard-username Username-root"
                >
                  Ngoc
                </span>
                <time
                  className="Timestamp-root RelativeTime-root"
                  dateTime="2018-07-06T18:24:00.000Z"
                  title="2018-07-06T18:24:00.000Z"
                >
                  2018-07-06T18:24:00.000Z
                </time>
                <button
                  className="BaseButton-root FeatureButton-root"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span>
                    Feature
                  </span>
                </button>
              </div>
            </div>
            <div
              className="Box-root Typography-root Typography-bodyCopy Typography-colorTextPrimary ModerateCard-content CommentContent-root"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Don't fool with me",
                }
              }
            />
            <div
              className="ModerateCard-footer"
            >
              <div
                className="Box-root HorizontalGutter-root HorizontalGutter-full"
              >
                <div>
                  <a
                    className="TextLink-root ModerateCard-link"
                    href="http://localhost/comment/1"
                    target="_blank"
                  >
                    View Context
                    <span
                      aria-hidden="true"
                      className="Icon-root Icon-xs TextLink-icon"
                    >
                      open_in_new
                    </span>
                  </a>
                </div>
                <div>
                  <span
                    className="ModerateCard-story"
                  >
                    Story
                  </span>
                  :
                  <span
                    className="ModerateCard-storyTitle"
                  >
                    Finally a Cure for Cancer
                  </span>

                  <a
                    className="TextLink-root ModerateCard-link"
                    href="/admin/moderate/story-1"
                    onClick={[Function]}
                  >
                    Moderate Story
                  </a>
                </div>
                <div
                  className="Box-root HorizontalGutter-root HorizontalGutter-double"
                >
                  <div
                    className="Box-root Flex-root Flex-flex"
                  >
                    <div
                      className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
                    >
                      <span
                        className="Marker-root Marker-colorError Marker-variantRegular"
                      >
                        <span>
                          Offensive
                        </span>

                        <span
                          className="Count-root"
                        >
                          3
                        </span>
                      </span>
                    </div>
                    <button
                      aria-controls="uuid-1"
                      aria-expanded={false}
                      className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Markers-detailsButtonColorRegular Button-variantRegular Markers-detailsButton"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      type="button"
                    >
                      <span
                        className="Markers-detailsText"
                      >
                        Details
                      </span>
                      <span
                        aria-hidden="true"
                        className="Icon-root Icon-sm"
                      >
                        arrow_drop_down
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ModerateCard-separator"
          />
          <div
            className="Box-root Flex-root ModerateCard-aside ModerateCard-asideWithoutReplyTo Flex-flex Flex-itemGutter Flex-alignCenter Flex-directionColumn gutter"
          >
            <div
              className="ModerateCard-decision"
            >
              Decision
            </div>
            <div
              className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
            >
              <button
                aria-label="Reject"
                className="BaseButton-root RejectButton-root RejectButton-invert"
                disabled={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-lg RejectButton-icon"
                >
                  close
                </span>
              </button>
              <button
                aria-label="Approve"
                className="BaseButton-root ApproveButton-root"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-lg ApproveButton-icon"
                >
                  done
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`rejected queue renders rejected queue with comments and load more 1`] = `
<div
  className="Card-root ModerateCard-root"
  data-testid="moderate-comment-comment-2"
>
  <div
    className="Box-root Flex-root Flex-flex"
  >
    <div
      className="ModerateCard-mainContainer"
    >
      <div
        className="ModerateCard-topBar"
      >
        <div>
          <span
            className="Box-root Typography-root Typography-heading4 Typography-colorTextPrimary ModerateCard-username Username-root"
          >
            Max
          </span>
          <time
            className="Timestamp-root RelativeTime-root"
            dateTime="2018-07-06T18:24:00.000Z"
            title="2018-07-06T18:24:00.000Z"
          >
            2018-07-06T18:24:00.000Z
          </time>
          <button
            className="BaseButton-root FeatureButton-root"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <span>
              Feature
            </span>
          </button>
        </div>
      </div>
      <div
        className="Box-root Typography-root Typography-bodyCopy Typography-colorTextPrimary ModerateCard-content CommentContent-root"
        dangerouslySetInnerHTML={
          Object {
            "__html": "I think I deserve better",
          }
        }
      />
      <div
        className="ModerateCard-footer"
      >
        <div
          className="Box-root HorizontalGutter-root HorizontalGutter-full"
        >
          <div>
            <a
              className="TextLink-root ModerateCard-link"
              href="http://localhost/comment/2"
              target="_blank"
            >
              View Context
              <span
                aria-hidden="true"
                className="Icon-root Icon-xs TextLink-icon"
              >
                open_in_new
              </span>
            </a>
          </div>
          <div>
            <span
              className="ModerateCard-story"
            >
              Story
            </span>
            :
            <span
              className="ModerateCard-storyTitle"
            >
              Finally a Cure for Cancer
            </span>

            <a
              className="TextLink-root ModerateCard-link"
              href="/admin/moderate/story-1"
              onClick={[Function]}
            >
              Moderate Story
            </a>
          </div>
          <div
            className="Box-root HorizontalGutter-root HorizontalGutter-double"
          >
            <div
              className="Box-root Flex-root Flex-flex"
            >
              <div
                className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
              >
                <span
                  className="Marker-root Marker-colorError Marker-variantRegular"
                >
                  <span>
                    Offensive
                  </span>

                  <span
                    className="Count-root"
                  >
                    1
                  </span>
                </span>
                <span
                  className="Marker-root Marker-colorError Marker-variantRegular"
                >
                  <span>
                    Spam
                  </span>

                  <span
                    className="Count-root"
                  >
                    1
                  </span>
                </span>
              </div>
              <button
                aria-controls="uuid-2"
                aria-expanded={false}
                className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Markers-detailsButtonColorRegular Button-variantRegular Markers-detailsButton"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                <span
                  className="Markers-detailsText"
                >
                  Details
                </span>
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-sm"
                >
                  arrow_drop_down
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ModerateCard-separator"
    />
    <div
      className="Box-root Flex-root ModerateCard-aside ModerateCard-asideWithoutReplyTo Flex-flex Flex-itemGutter Flex-alignCenter Flex-directionColumn gutter"
    >
      <div
        className="ModerateCard-decision"
      >
        Decision
      </div>
      <div
        className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
      >
        <button
          aria-label="Reject"
          className="BaseButton-root RejectButton-root RejectButton-invert"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
            className="Icon-root Icon-lg RejectButton-icon"
          >
            close
          </span>
        </button>
        <button
          aria-label="Approve"
          className="BaseButton-root ApproveButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
            className="Icon-root Icon-lg ApproveButton-icon"
          >
            done
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`reported queue renders empty reported queue 1`] = `
<div
  className="Main-root"
>
  <div
    className="AppBar-root AppBar-gutterBegin AppBar-gutterEnd"
  >
    <div
      className="Box-root Flex-root AppBar-container Flex-flex"
    >
      <div
        className="Box-root Flex-root Begin-root Flex-flex Flex-doubleItemGutter Flex-alignCenter gutter"
      >
        <div
          className="Main-logoContainer"
        >
          <div
            className="Box-root Flex-root Logo-root Flex-flex Flex-alignCenter"
          >
            <svg
              className="BrandIcon-base Logo-icon BrandIcon-md"
              data-name="Layer 1"
              id="Layer_1"
              viewBox="0 0 541.77 557.72"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <clipPath
                  id="clip-path"
                >
                  <rect
                    fill="none"
                    height="570"
                    width="554"
                  />
                </clipPath>
                <clipPath
                  id="clip-path-2"
                  transform="translate(-8.12 -8.14)"
                >
                  <path
                    clipPath="url(#clip-path)"
                    clipRule="evenodd"
                    d="M61.63,350.45c-.67,10.22,1.34,21.13,6,32.21a95.36,95.36,0,0,0,27.22,36.41c26,21.16,52.14,17.65,77.43,14.24,21.22-2.85,43.17-5.8,69,5.43,33.54,14.57,59.71,45.39,66.65,78.46a99.16,99.16,0,0,1,.11,38.66H219.65a16.89,16.89,0,0,0-.71-2.44c-16.54-44.09-38.46-69.52-67.09-77.78-9.37-2.66-18-3-25.68-3.27-9.91-.37-17.75-.66-26-5.6s-14.93-13.28-19.59-24.42a17,17,0,0,0-22.12-9.07,16.69,16.69,0,0,0-9.17,21.88c7.45,17.8,18.6,31.31,33.25,40.21,15.85,9.48,30.54,10,42.35,10.48,6.55.24,12.2.45,17.55,2,15.64,4.51,29.43,20.65,41.07,48H63.07a45,45,0,0,1-44.95-45V322.78a144.51,144.51,0,0,0,43.51,27.67Zm13-31.55a109.22,109.22,0,0,1-56.48-52.22v-66a88.41,88.41,0,0,0,35.59,10.37c18.52,1.13,34.77-4.64,47-16.71,11.63-11.51,14.6-24.24,18.05-39,2.88-12.32,6.46-27.66,16.66-48.7,10.44-21.72,17.13-30,24.69-30.51,11-.79,29.3,13.46,32.09,34.75,2,14.93-3.58,25.14-10.07,37C175,161,166,177.28,172.4,198.15c6.81,22.16,25.44,31.45,40.4,38.91,15.61,7.78,25.42,13.21,30.37,26.2,4.26,11.27,4.87,27.9-.71,33.32-3.74,3.66-16.43.64-29.86-2.55-23-5.47-54.5-12.95-91.49-1.57-9.77,3-32.07,9.72-46.51,26.44ZM357.73,18.14c-15,17.37-28.76,40.23-34.85,69-4.25,19.33-13.09,59.57,13.51,88.26A71.68,71.68,0,0,0,388.11,198a61.12,61.12,0,0,0,22.65-4.23c31.63-12.61,46.84-43.4,49.25-56.36,3.24-17.51,5-35.76,6.33-51.32a11.43,11.43,0,0,1,5.38-8.61l.5-.31a12.23,12.23,0,0,1,13.33,1.63c19.82,16.56,36.73,31.82,51.69,46.63a17.07,17.07,0,0,0,2.64,2.14v93.21a16.92,16.92,0,0,0-3.87,4.69c-9.23,16.43-23.71,36.42-40.11,38.31-6.55.7-10.3-1.49-20.21-7.9S452.37,240.8,431,236c-23.2-5.22-38.56-2.06-50.9.48-10.61,2.18-17.62,3.62-28.9,0-27.43-9-42.31-36.22-51.21-52.47l-.24-.45c-19.81-36.54-18.23-71.85-16.84-103l0-.58a287.16,287.16,0,0,1,9.81-61.77Zm49.14,0h88.06a45,45,0,0,1,44.95,45V80.79c-10.08-9.22-21-18.69-32.79-28.58a45.72,45.72,0,0,0-50.93-5.38,19.1,19.1,0,0,0-2.55,1.52,46.1,46.1,0,0,0-21,34.46,1.49,1.49,0,0,0,0,.21c-1.24,14.7-2.91,31.88-5.86,47.9-.88,3.66-9.12,23.11-28.33,30.76-12.81,5.1-29.11-1.09-37.41-10-14.22-15.33-8.26-42.48-5-57.19C363.43,59.29,386.3,35,404.17,20.82a18,18,0,0,0,2.7-2.68Zm-149.42,0a319.88,319.88,0,0,0-8.67,60.21l0,.62c-1.43,32-3.38,75.91,21,120.82l.28.52c9.81,17.93,30.25,55.25,70.55,68.52,19.95,6.48,34,3.59,46.44,1,11-2.26,20.48-4.21,36.49-.61,15.43,3.48,24.69,9.46,33.63,15.25C467,290.87,478,298,493.8,298a54,54,0,0,0,5.86-.32c14.5-1.67,27.83-8.41,40.22-20.42v45.53a179.81,179.81,0,0,1-47.68.48c-17-2.18-28.9-6.21-40.39-10.1-16.13-5.46-31.37-10.63-54.46-8.79-12.34.86-49.5,3.52-68.67,32.46-21.27,32-4.79,71.47-1.27,79.05,0,.06,0,.11.07.17,11.15,23.37,28,33.16,44.25,42.63,9.57,5.57,19.46,11.33,29.45,20.4C421,497.23,435.05,523,443,555.86H342.61a132,132,0,0,0-1.29-45.63c-9.16-43.62-43.1-84-86.46-102.82-34.51-15-63.68-11.11-87.12-8-24.18,3.25-37.44,4.42-51.35-6.91-15-12.14-24-32.83-19.67-45.1,4.74-13.34,25.44-19.62,34.35-22.32,28.19-8.67,52.33-2.93,73.64,2.14,21.83,5.18,44.4,10.55,61.57-6.21,17.7-17.22,17-48.29,8.81-69.92-10-26.15-30.53-36.41-47.06-44.65-13.09-6.53-20.6-10.6-23-18.37-2-6.43.36-11.62,7-23.75,7.41-13.48,17.55-31.93,14-58-4.77-36.43-36.65-66.5-68.28-64.3-30.19,2.1-44.53,32-53.08,49.73-11.83,24.42-16.07,42.54-19.16,55.78-2.9,12.39-4.37,18.06-8.79,22.43-5.21,5.13-12.26,7.47-21,6.93-13-.8-27.57-8-37.68-18.45V63.15a45,45,0,0,1,45-45Zm282.43,449v43.76a45,45,0,0,1-44.95,45H477.46a16.09,16.09,0,0,0-.36-2.56c-4.89-22.41-12.24-42.37-22-59.73a120.79,120.79,0,0,1,39-21,119.51,119.51,0,0,1,45.77-5.45Zm0-34.82a152.6,152.6,0,0,0-56,7.12,154.85,154.85,0,0,0-48.66,25.94,153.26,153.26,0,0,0-11.29-11.5c-12.68-11.52-24.67-18.5-35.24-24.65-14.45-8.41-24-14-30.62-27.78-.87-1.9-12.66-28.42-1.23-45.62,10-15.1,33.94-16.77,42.95-17.4l.17,0c16.24-1.3,26.66,2.23,41.07,7.11,12.45,4.22,26.57,9,46.95,11.61a212.66,212.66,0,0,0,51.92.08v75.11Z"
                    fill="none"
                  />
                </clipPath>
              </defs>
              <title>
                logo mark2018
              </title>
              <g
                clipPath="url(#clip-path-2)"
              >
                <rect
                  fill="#f7705f"
                  height="557.72"
                  width="541.77"
                />
              </g>
            </svg>
            <h1
              className="Box-root Typography-root Typography-heading1 Typography-colorTextPrimary Typography-alignLeft BrandName-root BrandName-md"
            >
              Coral
            </h1>
          </div>
          <p
            className="Box-root Typography-root Typography-detail Typography-colorTextPrimary Version-version"
          >
            vTest
          </p>
        </div>
        <nav
          className="Navigation-root"
        >
          <ul
            className="Navigation-ul"
          >
            <li
              className="NavigationItem-root"
            >
              <a
                className="NavigationItem-anchor NavigationItem-active"
                href="/admin/moderate"
                onClick={[Function]}
              >
                Moderate
              </a>
            </li>
            <li
              className="NavigationItem-root"
            >
              <a
                className="NavigationItem-anchor"
                href="/admin/stories"
                onClick={[Function]}
              >
                Stories
              </a>
            </li>
            <li
              className="NavigationItem-root"
            >
              <a
                className="NavigationItem-anchor"
                href="/admin/community"
                onClick={[Function]}
              >
                Community
              </a>
            </li>
            <li
              className="NavigationItem-root"
            >
              <a
                className="NavigationItem-anchor"
                href="/admin/configure"
                onClick={[Function]}
              >
                Configure
              </a>
            </li>
          </ul>
        </nav>
      </div>
      <div
        className="Box-root Flex-root End-root Flex-flex Flex-alignCenter"
      >
        <div
          className="Popover-root"
          data-testid="decisionHistory-popover"
        >
          <button
            aria-controls="decision-history-popover"
            className="BaseButton-root DecisionHistoryButton-historyIcon"
            data-testid="decisionHistory-toggle"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
              className="Icon-root Icon-lg"
            >
              history
            </span>
          </button>
          <div
            aria-hidden={true}
            aria-labelledby="decision-history-popover-ariainfo"
            id="decision-history-popover"
            role="popup"
          >
            <div
              className="AriaInfo-root"
              id="decision-history-popover-ariainfo"
            >
              A dialog showing the decision history
            </div>
          </div>
        </div>
        <div
          className="Divider-root"
        />
        <div
          className="Popover-root"
        >
          <button
            className="BaseButton-root Button-root UserMenu-button Button-sizeSmall Button-colorRegular Button-variantRegular"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
              className="Icon-root Icon-lg ButtonIcon-root"
            >
              account_circle
            </span>
            <span
              className="UserMenu-buttonText"
            >
              Markus
            </span>
            <span
              aria-hidden="true"
              className="Icon-root Icon-lg ButtonIcon-root"
            >
              arrow_drop_down
            </span>
          </button>
          <div
            aria-hidden={true}
            aria-labelledby="userMenu-ariainfo"
            id="userMenu"
            role="popup"
          >
            <div
              className="AriaInfo-root"
              id="userMenu-ariainfo"
            >
              A dialog of the user menu with related links and actions
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="moderate-container"
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-label="Search or jump to story"
      aria-owns="moderate-searchBar-listBox"
      className="SubBar-root Bar-root"
      data-testid="moderate-searchBar-container"
      role="combobox"
    >
      <div
        className="Box-root Flex-root SubBar-container Flex-flex Flex-justifyCenter Flex-alignCenter"
      >
        <div
          className="Backdrop-root Bar-bumpZIndex"
        />
        <form
          aria-label="Stories"
          className="Bar-bumpZIndex"
          onMouseDown={[Function]}
          onSubmit={[Function]}
          role="search"
        >
          <div
            className="Popover-root"
          >
            <div>
              <div
                className="Box-root Flex-root Field-root Flex-flex Flex-alignStretch"
              >
                <div
                  className="Box-root Flex-root Field-begin Flex-flex Flex-alignCenter"
                >
                  <span
                    aria-hidden="true"
                    className="Icon-root Icon-md Field-searchIcon"
                  >
                    search
                  </span>
                </div>
                <input
                  aria-autocomplete="list"
                  aria-controls="moderate-searchBar-listBox"
                  aria-label="Search or jump to story..."
                  autoComplete="off"
                  className="Field-input Field-inputWithTitle"
                  name="search"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  placeholder="All stories"
                  spellCheck={false}
                  value=""
                />
                <div
                  className="Box-root Flex-root Field-end Flex-flex Flex-alignCenter"
                />
              </div>
            </div>
            <div
              aria-hidden={true}
              aria-labelledby="moderate-searchBar-popover-ariainfo"
              id="moderate-searchBar-popover"
              role="popup"
            />
          </div>
        </form>
      </div>
    </div>
    <div
      className="SubBar-root"
      data-testid="moderate-tabBar-container"
    >
      <div
        className="Box-root Flex-root SubBar-container Flex-flex Flex-justifyCenter Flex-alignCenter"
      >
        <nav
          className="Navigation-root"
        >
          <ul
            className="Navigation-ul"
          >
            <li
              className="NavigationItem-root"
            >
              <a
                className="NavigationItem-anchor NavigationItem-active"
                href="/admin/moderate/reported"
                onClick={[Function]}
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-sm"
                >
                  flag
                </span>
                <span>
                  reported
                </span>
                <span
                  className="Counter-root Counter-colorInherit"
                  data-testid="moderate-navigation-reported-count"
                >
                  <span
                    className="Counter-text"
                  >
                    0
                  </span>
                </span>
              </a>
            </li>
            <li
              className="NavigationItem-root"
            >
              <a
                className="NavigationItem-anchor"
                href="/admin/moderate/pending"
                onClick={[Function]}
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-sm"
                >
                  access_time
                </span>
                <span>
                  Pending
                </span>
                <span
                  className="Counter-root Counter-colorInherit"
                  data-testid="moderate-navigation-pending-count"
                >
                  <span
                    className="Counter-text"
                  >
                    0
                  </span>
                </span>
              </a>
            </li>
            <li
              className="NavigationItem-root"
            >
              <a
                className="NavigationItem-anchor"
                href="/admin/moderate/unmoderated"
                onClick={[Function]}
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-sm"
                >
                  forum
                </span>
                <span>
                  unmoderated
                </span>
                <span
                  className="Counter-root Counter-colorInherit"
                  data-testid="moderate-navigation-unmoderated-count"
                >
                  <span
                    className="Counter-text"
                  >
                    0
                  </span>
                </span>
              </a>
            </li>
            <li
              className="NavigationItem-root"
            >
              <a
                className="NavigationItem-anchor"
                href="/admin/moderate/rejected"
                onClick={[Function]}
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-sm"
                >
                  cancel
                </span>
                <span>
                  rejected
                </span>
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
    <div
      className="Moderate-background"
    />
    <div
      className="MainLayout-root"
      data-testid="moderate-main-container"
    >
      <main
        className="Moderate-main"
      >
        <div
          className="Box-root HorizontalGutter-root Queue-root HorizontalGutter-double"
        >
          <div
            className="Card-root EmptyMessage-root"
          >
            Nicely done! There are no more reported comments to moderate.
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`reported queue renders reported queue with comments 1`] = `
<div
  className="MainLayout-root"
  data-testid="moderate-main-container"
>
  <main
    className="Moderate-main"
  >
    <div
      className="Box-root HorizontalGutter-root Queue-root HorizontalGutter-double"
    >
      <div
        className="Card-root ModerateCard-root"
        data-testid="moderate-comment-comment-0"
      >
        <div
          className="Box-root Flex-root Flex-flex"
        >
          <div
            className="ModerateCard-mainContainer"
          >
            <div
              className="ModerateCard-topBar"
            >
              <div>
                <span
                  className="Box-root Typography-root Typography-heading4 Typography-colorTextPrimary ModerateCard-username Username-root"
                >
                  Isabelle
                </span>
                <time
                  className="Timestamp-root RelativeTime-root"
                  dateTime="2018-07-06T18:24:00.000Z"
                  title="2018-07-06T18:24:00.000Z"
                >
                  2018-07-06T18:24:00.000Z
                </time>
                <button
                  className="BaseButton-root FeatureButton-root"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span>
                    Feature
                  </span>
                </button>
              </div>
            </div>
            <div
              className="Box-root Typography-root Typography-bodyCopy Typography-colorTextPrimary ModerateCard-content CommentContent-root"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "This is the last random sentence I will be writing and I am going to stop mid-sent",
                }
              }
            />
            <div
              className="ModerateCard-footer"
            >
              <div
                className="Box-root HorizontalGutter-root HorizontalGutter-full"
              >
                <div>
                  <a
                    className="TextLink-root ModerateCard-link"
                    href="http://localhost/comment/0"
                    target="_blank"
                  >
                    View Context
                    <span
                      aria-hidden="true"
                      className="Icon-root Icon-xs TextLink-icon"
                    >
                      open_in_new
                    </span>
                  </a>
                </div>
                <div>
                  <span
                    className="ModerateCard-story"
                  >
                    Story
                  </span>
                  :
                  <span
                    className="ModerateCard-storyTitle"
                  >
                    Finally a Cure for Cancer
                  </span>

                  <a
                    className="TextLink-root ModerateCard-link"
                    href="/admin/moderate/story-1"
                    onClick={[Function]}
                  >
                    Moderate Story
                  </a>
                </div>
                <div
                  className="Box-root HorizontalGutter-root HorizontalGutter-double"
                >
                  <div
                    className="Box-root Flex-root Flex-flex"
                  >
                    <div
                      className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
                    >
                      <span
                        className="Marker-root Marker-colorError Marker-variantRegular"
                      >
                        <span>
                          Spam
                        </span>

                        <span
                          className="Count-root"
                        >
                          2
                        </span>
                      </span>
                    </div>
                    <button
                      aria-controls="uuid-0"
                      aria-expanded={false}
                      className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Markers-detailsButtonColorRegular Button-variantRegular Markers-detailsButton"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      type="button"
                    >
                      <span
                        className="Markers-detailsText"
                      >
                        Details
                      </span>
                      <span
                        aria-hidden="true"
                        className="Icon-root Icon-sm"
                      >
                        arrow_drop_down
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ModerateCard-separator"
          />
          <div
            className="Box-root Flex-root ModerateCard-aside ModerateCard-asideWithoutReplyTo Flex-flex Flex-itemGutter Flex-alignCenter Flex-directionColumn gutter"
          >
            <div
              className="ModerateCard-decision"
            >
              Decision
            </div>
            <div
              className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
            >
              <button
                aria-label="Reject"
                className="BaseButton-root RejectButton-root"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-lg RejectButton-icon"
                >
                  close
                </span>
              </button>
              <button
                aria-label="Approve"
                className="BaseButton-root ApproveButton-root"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-lg ApproveButton-icon"
                >
                  done
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="Card-root ModerateCard-root"
        data-testid="moderate-comment-comment-1"
      >
        <div
          className="Box-root Flex-root Flex-flex"
        >
          <div
            className="ModerateCard-mainContainer"
          >
            <div
              className="ModerateCard-topBar"
            >
              <div>
                <span
                  className="Box-root Typography-root Typography-heading4 Typography-colorTextPrimary ModerateCard-username Username-root"
                >
                  Ngoc
                </span>
                <time
                  className="Timestamp-root RelativeTime-root"
                  dateTime="2018-07-06T18:24:00.000Z"
                  title="2018-07-06T18:24:00.000Z"
                >
                  2018-07-06T18:24:00.000Z
                </time>
                <button
                  className="BaseButton-root FeatureButton-root"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span>
                    Feature
                  </span>
                </button>
              </div>
            </div>
            <div
              className="Box-root Typography-root Typography-bodyCopy Typography-colorTextPrimary ModerateCard-content CommentContent-root"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Don't fool with me",
                }
              }
            />
            <div
              className="ModerateCard-footer"
            >
              <div
                className="Box-root HorizontalGutter-root HorizontalGutter-full"
              >
                <div>
                  <a
                    className="TextLink-root ModerateCard-link"
                    href="http://localhost/comment/1"
                    target="_blank"
                  >
                    View Context
                    <span
                      aria-hidden="true"
                      className="Icon-root Icon-xs TextLink-icon"
                    >
                      open_in_new
                    </span>
                  </a>
                </div>
                <div>
                  <span
                    className="ModerateCard-story"
                  >
                    Story
                  </span>
                  :
                  <span
                    className="ModerateCard-storyTitle"
                  >
                    Finally a Cure for Cancer
                  </span>

                  <a
                    className="TextLink-root ModerateCard-link"
                    href="/admin/moderate/story-1"
                    onClick={[Function]}
                  >
                    Moderate Story
                  </a>
                </div>
                <div
                  className="Box-root HorizontalGutter-root HorizontalGutter-double"
                >
                  <div
                    className="Box-root Flex-root Flex-flex"
                  >
                    <div
                      className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
                    >
                      <span
                        className="Marker-root Marker-colorError Marker-variantRegular"
                      >
                        <span>
                          Offensive
                        </span>

                        <span
                          className="Count-root"
                        >
                          3
                        </span>
                      </span>
                    </div>
                    <button
                      aria-controls="uuid-1"
                      aria-expanded={false}
                      className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Markers-detailsButtonColorRegular Button-variantRegular Markers-detailsButton"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      type="button"
                    >
                      <span
                        className="Markers-detailsText"
                      >
                        Details
                      </span>
                      <span
                        aria-hidden="true"
                        className="Icon-root Icon-sm"
                      >
                        arrow_drop_down
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ModerateCard-separator"
          />
          <div
            className="Box-root Flex-root ModerateCard-aside ModerateCard-asideWithoutReplyTo Flex-flex Flex-itemGutter Flex-alignCenter Flex-directionColumn gutter"
          >
            <div
              className="ModerateCard-decision"
            >
              Decision
            </div>
            <div
              className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
            >
              <button
                aria-label="Reject"
                className="BaseButton-root RejectButton-root"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-lg RejectButton-icon"
                >
                  close
                </span>
              </button>
              <button
                aria-label="Approve"
                className="BaseButton-root ApproveButton-root"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-lg ApproveButton-icon"
                >
                  done
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`reported queue renders reported queue with comments 2`] = `
<div
  className="MainLayout-root"
  data-testid="moderate-main-container"
>
  <main
    className="Moderate-main"
  >
    <div
      className="Box-root HorizontalGutter-root Queue-root HorizontalGutter-double"
    >
      <div
        className="Card-root ModerateCard-root"
        data-testid="moderate-comment-comment-0"
      >
        <div
          className="Box-root Flex-root Flex-flex"
        >
          <div
            className="ModerateCard-mainContainer"
          >
            <div
              className="ModerateCard-topBar"
            >
              <div>
                <span
                  className="Box-root Typography-root Typography-heading4 Typography-colorTextPrimary ModerateCard-username Username-root"
                >
                  Isabelle
                </span>
                <time
                  className="Timestamp-root RelativeTime-root"
                  dateTime="2018-07-06T18:24:00.000Z"
                  title="2018-07-06T18:24:00.000Z"
                >
                  2018-07-06T18:24:00.000Z
                </time>
                <button
                  className="BaseButton-root FeatureButton-root"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span>
                    Feature
                  </span>
                </button>
              </div>
            </div>
            <div
              className="Box-root Typography-root Typography-bodyCopy Typography-colorTextPrimary ModerateCard-content CommentContent-root"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "This is the last random sentence I will be writing and I am going to stop mid-sent",
                }
              }
            />
            <div
              className="ModerateCard-footer"
            >
              <div
                className="Box-root HorizontalGutter-root HorizontalGutter-full"
              >
                <div>
                  <a
                    className="TextLink-root ModerateCard-link"
                    href="http://localhost/comment/0"
                    target="_blank"
                  >
                    View Context
                    <span
                      aria-hidden="true"
                      className="Icon-root Icon-xs TextLink-icon"
                    >
                      open_in_new
                    </span>
                  </a>
                </div>
                <div>
                  <span
                    className="ModerateCard-story"
                  >
                    Story
                  </span>
                  :
                  <span
                    className="ModerateCard-storyTitle"
                  >
                    Finally a Cure for Cancer
                  </span>

                  <a
                    className="TextLink-root ModerateCard-link"
                    href="/admin/moderate/story-1"
                    onClick={[Function]}
                  >
                    Moderate Story
                  </a>
                </div>
                <div
                  className="Box-root HorizontalGutter-root HorizontalGutter-double"
                >
                  <div
                    className="Box-root Flex-root Flex-flex"
                  >
                    <div
                      className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
                    >
                      <span
                        className="Marker-root Marker-colorError Marker-variantRegular"
                      >
                        <span>
                          Spam
                        </span>

                        <span
                          className="Count-root"
                        >
                          2
                        </span>
                      </span>
                    </div>
                    <button
                      aria-controls="uuid-0"
                      aria-expanded={false}
                      className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Markers-detailsButtonColorRegular Button-variantRegular Markers-detailsButton"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      type="button"
                    >
                      <span
                        className="Markers-detailsText"
                      >
                        Details
                      </span>
                      <span
                        aria-hidden="true"
                        className="Icon-root Icon-sm"
                      >
                        arrow_drop_down
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ModerateCard-separator"
          />
          <div
            className="Box-root Flex-root ModerateCard-aside ModerateCard-asideWithoutReplyTo Flex-flex Flex-itemGutter Flex-alignCenter Flex-directionColumn gutter"
          >
            <div
              className="ModerateCard-decision"
            >
              Decision
            </div>
            <div
              className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
            >
              <button
                aria-label="Reject"
                className="BaseButton-root RejectButton-root"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-lg RejectButton-icon"
                >
                  close
                </span>
              </button>
              <button
                aria-label="Approve"
                className="BaseButton-root ApproveButton-root"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-lg ApproveButton-icon"
                >
                  done
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="Card-root ModerateCard-root"
        data-testid="moderate-comment-comment-1"
      >
        <div
          className="Box-root Flex-root Flex-flex"
        >
          <div
            className="ModerateCard-mainContainer"
          >
            <div
              className="ModerateCard-topBar"
            >
              <div>
                <span
                  className="Box-root Typography-root Typography-heading4 Typography-colorTextPrimary ModerateCard-username Username-root"
                >
                  Ngoc
                </span>
                <time
                  className="Timestamp-root RelativeTime-root"
                  dateTime="2018-07-06T18:24:00.000Z"
                  title="2018-07-06T18:24:00.000Z"
                >
                  2018-07-06T18:24:00.000Z
                </time>
                <button
                  className="BaseButton-root FeatureButton-root"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span>
                    Feature
                  </span>
                </button>
              </div>
            </div>
            <div
              className="Box-root Typography-root Typography-bodyCopy Typography-colorTextPrimary ModerateCard-content CommentContent-root"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Don't fool with me",
                }
              }
            />
            <div
              className="ModerateCard-footer"
            >
              <div
                className="Box-root HorizontalGutter-root HorizontalGutter-full"
              >
                <div>
                  <a
                    className="TextLink-root ModerateCard-link"
                    href="http://localhost/comment/1"
                    target="_blank"
                  >
                    View Context
                    <span
                      aria-hidden="true"
                      className="Icon-root Icon-xs TextLink-icon"
                    >
                      open_in_new
                    </span>
                  </a>
                </div>
                <div>
                  <span
                    className="ModerateCard-story"
                  >
                    Story
                  </span>
                  :
                  <span
                    className="ModerateCard-storyTitle"
                  >
                    Finally a Cure for Cancer
                  </span>

                  <a
                    className="TextLink-root ModerateCard-link"
                    href="/admin/moderate/story-1"
                    onClick={[Function]}
                  >
                    Moderate Story
                  </a>
                </div>
                <div
                  className="Box-root HorizontalGutter-root HorizontalGutter-double"
                >
                  <div
                    className="Box-root Flex-root Flex-flex"
                  >
                    <div
                      className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
                    >
                      <span
                        className="Marker-root Marker-colorError Marker-variantRegular"
                      >
                        <span>
                          Offensive
                        </span>

                        <span
                          className="Count-root"
                        >
                          3
                        </span>
                      </span>
                    </div>
                    <button
                      aria-controls="uuid-1"
                      aria-expanded={false}
                      className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Markers-detailsButtonColorRegular Button-variantRegular Markers-detailsButton"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      type="button"
                    >
                      <span
                        className="Markers-detailsText"
                      >
                        Details
                      </span>
                      <span
                        aria-hidden="true"
                        className="Icon-root Icon-sm"
                      >
                        arrow_drop_down
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ModerateCard-separator"
          />
          <div
            className="Box-root Flex-root ModerateCard-aside ModerateCard-asideWithoutReplyTo Flex-flex Flex-itemGutter Flex-alignCenter Flex-directionColumn gutter"
          >
            <div
              className="ModerateCard-decision"
            >
              Decision
            </div>
            <div
              className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
            >
              <button
                aria-label="Reject"
                className="BaseButton-root RejectButton-root"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-lg RejectButton-icon"
                >
                  close
                </span>
              </button>
              <button
                aria-label="Approve"
                className="BaseButton-root ApproveButton-root"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-lg ApproveButton-icon"
                >
                  done
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`reported queue renders reported queue with comments and load more 1`] = `
<div
  className="Card-root ModerateCard-root"
  data-testid="moderate-comment-comment-2"
>
  <div
    className="Box-root Flex-root Flex-flex"
  >
    <div
      className="ModerateCard-mainContainer"
    >
      <div
        className="ModerateCard-topBar"
      >
        <div>
          <span
            className="Box-root Typography-root Typography-heading4 Typography-colorTextPrimary ModerateCard-username Username-root"
          >
            Max
          </span>
          <time
            className="Timestamp-root RelativeTime-root"
            dateTime="2018-07-06T18:24:00.000Z"
            title="2018-07-06T18:24:00.000Z"
          >
            2018-07-06T18:24:00.000Z
          </time>
          <button
            className="BaseButton-root FeatureButton-root"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <span>
              Feature
            </span>
          </button>
        </div>
      </div>
      <div
        className="Box-root Typography-root Typography-bodyCopy Typography-colorTextPrimary ModerateCard-content CommentContent-root"
        dangerouslySetInnerHTML={
          Object {
            "__html": "I think I deserve better",
          }
        }
      />
      <div
        className="ModerateCard-footer"
      >
        <div
          className="Box-root HorizontalGutter-root HorizontalGutter-full"
        >
          <div>
            <a
              className="TextLink-root ModerateCard-link"
              href="http://localhost/comment/2"
              target="_blank"
            >
              View Context
              <span
                aria-hidden="true"
                className="Icon-root Icon-xs TextLink-icon"
              >
                open_in_new
              </span>
            </a>
          </div>
          <div>
            <span
              className="ModerateCard-story"
            >
              Story
            </span>
            :
            <span
              className="ModerateCard-storyTitle"
            >
              Finally a Cure for Cancer
            </span>

            <a
              className="TextLink-root ModerateCard-link"
              href="/admin/moderate/story-1"
              onClick={[Function]}
            >
              Moderate Story
            </a>
          </div>
          <div
            className="Box-root HorizontalGutter-root HorizontalGutter-double"
          >
            <div
              className="Box-root Flex-root Flex-flex"
            >
              <div
                className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
              >
                <span
                  className="Marker-root Marker-colorPrimary Marker-variantRegular"
                >
                  Pre-Mod
                </span>
                <span
                  className="Marker-root Marker-colorError Marker-variantRegular"
                >
                  <span>
                    Offensive
                  </span>

                  <span
                    className="Count-root"
                  >
                    1
                  </span>
                </span>
                <span
                  className="Marker-root Marker-colorError Marker-variantRegular"
                >
                  <span>
                    Spam
                  </span>

                  <span
                    className="Count-root"
                  >
                    1
                  </span>
                </span>
              </div>
              <button
                aria-controls="uuid-2"
                aria-expanded={false}
                className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Markers-detailsButtonColorRegular Button-variantRegular Markers-detailsButton"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                <span
                  className="Markers-detailsText"
                >
                  Details
                </span>
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-sm"
                >
                  arrow_drop_down
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ModerateCard-separator"
    />
    <div
      className="Box-root Flex-root ModerateCard-aside ModerateCard-asideWithoutReplyTo Flex-flex Flex-itemGutter Flex-alignCenter Flex-directionColumn gutter"
    >
      <div
        className="ModerateCard-decision"
      >
        Decision
      </div>
      <div
        className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
      >
        <button
          aria-label="Reject"
          className="BaseButton-root RejectButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
            className="Icon-root Icon-lg RejectButton-icon"
          >
            close
          </span>
        </button>
        <button
          aria-label="Approve"
          className="BaseButton-root ApproveButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
            className="Icon-root Icon-lg ApproveButton-icon"
          >
            done
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`search bar all stories active search with no results 1`] = `
<div
  aria-expanded={true}
  aria-haspopup="listbox"
  aria-label="Search or jump to story"
  aria-owns="moderate-searchBar-listBox"
  className="SubBar-root Bar-root"
  data-testid="moderate-searchBar-container"
  role="combobox"
>
  <div
    className="Box-root Flex-root SubBar-container Flex-flex Flex-justifyCenter Flex-alignCenter"
  >
    <div
      className="Backdrop-root Backdrop-active Bar-bumpZIndex"
    />
    <form
      aria-label="Stories"
      className="Bar-bumpZIndex"
      onMouseDown={[Function]}
      onSubmit={[Function]}
      role="search"
    >
      <div
        className="Popover-root"
      >
        <div>
          <div
            className="Box-root Flex-root Field-root Flex-flex Flex-alignStretch"
          >
            <div
              className="Box-root Flex-root Field-begin Flex-flex Flex-alignCenter"
            >
              <span
                aria-hidden="true"
                className="Icon-root Icon-md Field-searchIcon"
              >
                search
              </span>
              <div
                className="Field-beginStories"
              >
                Stories:
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="moderate-searchBar-listBox"
              aria-label="Search or jump to story..."
              autoComplete="off"
              className="Field-input"
              name="search"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Use quotation marks around each search term (e.g. “team”, “St. Louis”)"
              spellCheck={false}
              value=""
            />
            <div
              className="Box-root Flex-root Field-end Flex-flex Flex-alignCenter"
            >
              <button
                className="BaseButton-root Field-searchButton"
                disabled={true}
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="submit"
              >
                Search
              </button>
            </div>
          </div>
        </div>
        <div
          aria-hidden={false}
          aria-labelledby="moderate-searchBar-popover-ariainfo"
          id="moderate-searchBar-popover"
          role="popup"
        >
          <div
            className="Popover-popover Bar-popover Popover-bottom"
            style={
              Object {
                "left": 0,
                "opacity": 0,
                "pointerEvents": "none",
                "position": "absolute",
                "top": 0,
              }
            }
          >
            <ul
              className="Bar-listBox"
              id="moderate-searchBar-listBox"
              role="listbox"
            >
              <ul
                aria-labelledby="moderate-searchBar-context-title"
                className="Group-root"
                id="moderate-searchBar-context"
                role="group"
              >
                <li
                  className="Group-title"
                  id="moderate-searchBar-context-title"
                >
                  Currently moderating
                </li>
                <li
                  aria-selected={false}
                  className="Option-root"
                  id="moderate-searchBar-listBoxOption-0"
                  onClick={[Function]}
                  role="option"
                >
                  <a
                    className="Option-link"
                    href="/admin/moderate"
                    tabIndex={-1}
                  >
                    <div
                      className="Option-container"
                    >
                      <div
                        className="Option-title"
                      >
                        <div
                          className="AriaInfo-root"
                        >
                          Go to
                        </div>
                        <span>
                          All stories
                        </span>
                      </div>
                      <div
                        className="Option-details"
                      />
                    </div>
                  </a>
                </li>
              </ul>
            </ul>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`search bar all stories active search with too many results 1`] = `
<li
  aria-selected={false}
  className="SeeAllOption-root"
  id="moderate-searchBar-listBoxOption-3"
  onClick={[Function]}
  role="option"
>
  <a
    className="SeeAllOption-link"
    href="/admin/stories?q=InterestingStory"
    tabIndex={-1}
  >
    <span>
      See all results
    </span>
    <span
      aria-hidden="true"
      className="Icon-root Icon-sm SeeAllOption-icon"
    >
      arrow_forward
    </span>
  </a>
</li>
`;

exports[`search bar all stories renders search bar 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-label="Search or jump to story"
  aria-owns="moderate-searchBar-listBox"
  className="SubBar-root Bar-root"
  data-testid="moderate-searchBar-container"
  role="combobox"
>
  <div
    className="Box-root Flex-root SubBar-container Flex-flex Flex-justifyCenter Flex-alignCenter"
  >
    <div
      className="Backdrop-root Bar-bumpZIndex"
    />
    <form
      aria-label="Stories"
      className="Bar-bumpZIndex"
      onMouseDown={[Function]}
      onSubmit={[Function]}
      role="search"
    >
      <div
        className="Popover-root"
      >
        <div>
          <div
            className="Box-root Flex-root Field-root Flex-flex Flex-alignStretch"
          >
            <div
              className="Box-root Flex-root Field-begin Flex-flex Flex-alignCenter"
            >
              <span
                aria-hidden="true"
                className="Icon-root Icon-md Field-searchIcon"
              >
                search
              </span>
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="moderate-searchBar-listBox"
              aria-label="Search or jump to story..."
              autoComplete="off"
              className="Field-input Field-inputWithTitle"
              name="search"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="All stories"
              spellCheck={false}
              value=""
            />
            <div
              className="Box-root Flex-root Field-end Flex-flex Flex-alignCenter"
            />
          </div>
        </div>
        <div
          aria-hidden={true}
          aria-labelledby="moderate-searchBar-popover-ariainfo"
          id="moderate-searchBar-popover"
          role="popup"
        />
      </div>
    </form>
  </div>
</div>
`;

exports[`single comment view approves single comment 1`] = `
<div
  className="Card-root ModerateCard-root"
  data-testid="moderate-comment-comment-0"
>
  <div
    className="Box-root Flex-root Flex-flex"
  >
    <div
      className="ModerateCard-mainContainer"
    >
      <div
        className="ModerateCard-topBar"
      >
        <div>
          <span
            className="Box-root Typography-root Typography-heading4 Typography-colorTextPrimary ModerateCard-username Username-root"
          >
            Isabelle
          </span>
          <time
            className="Timestamp-root RelativeTime-root"
            dateTime="2018-07-06T18:24:00.000Z"
            title="2018-07-06T18:24:00.000Z"
          >
            2018-07-06T18:24:00.000Z
          </time>
          <button
            className="BaseButton-root FeatureButton-root"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <span>
              Feature
            </span>
          </button>
        </div>
      </div>
      <div
        className="Box-root Typography-root Typography-bodyCopy Typography-colorTextPrimary ModerateCard-content CommentContent-root"
        dangerouslySetInnerHTML={
          Object {
            "__html": "This is the last random sentence I will be writing and I am going to stop mid-sent",
          }
        }
      />
      <div
        className="ModerateCard-footer"
      >
        <div
          className="Box-root HorizontalGutter-root HorizontalGutter-full"
        >
          <div>
            <a
              className="TextLink-root ModerateCard-link"
              href="http://localhost/comment/0"
              target="_blank"
            >
              View Context
              <span
                aria-hidden="true"
                className="Icon-root Icon-xs TextLink-icon"
              >
                open_in_new
              </span>
            </a>
          </div>
          <div
            className="Box-root HorizontalGutter-root HorizontalGutter-double"
          >
            <div
              className="Box-root Flex-root Flex-flex"
            >
              <div
                className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
              >
                <span
                  className="Marker-root Marker-colorError Marker-variantRegular"
                >
                  <span>
                    Spam
                  </span>

                  <span
                    className="Count-root"
                  >
                    2
                  </span>
                </span>
              </div>
              <button
                aria-controls="uuid-0"
                aria-expanded={false}
                className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Markers-detailsButtonColorRegular Button-variantRegular Markers-detailsButton"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                <span
                  className="Markers-detailsText"
                >
                  Details
                </span>
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-sm"
                >
                  arrow_drop_down
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ModerateCard-separator"
    />
    <div
      className="Box-root Flex-root ModerateCard-aside ModerateCard-asideWithoutReplyTo Flex-flex Flex-itemGutter Flex-alignCenter Flex-directionColumn gutter"
    >
      <div
        className="ModerateCard-decision"
      >
        Decision
      </div>
      <div
        className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
      >
        <button
          aria-label="Reject"
          className="BaseButton-root RejectButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
            className="Icon-root Icon-lg RejectButton-icon"
          >
            close
          </span>
        </button>
        <button
          aria-label="Approve"
          className="BaseButton-root ApproveButton-root ApproveButton-invert"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
            className="Icon-root Icon-lg ApproveButton-icon"
          >
            done
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`single comment view rejects single comment 1`] = `
<div
  className="Card-root ModerateCard-root"
  data-testid="moderate-comment-comment-0"
>
  <div
    className="Box-root Flex-root Flex-flex"
  >
    <div
      className="ModerateCard-mainContainer"
    >
      <div
        className="ModerateCard-topBar"
      >
        <div>
          <span
            className="Box-root Typography-root Typography-heading4 Typography-colorTextPrimary ModerateCard-username Username-root"
          >
            Isabelle
          </span>
          <time
            className="Timestamp-root RelativeTime-root"
            dateTime="2018-07-06T18:24:00.000Z"
            title="2018-07-06T18:24:00.000Z"
          >
            2018-07-06T18:24:00.000Z
          </time>
          <button
            className="BaseButton-root FeatureButton-root"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <span>
              Feature
            </span>
          </button>
        </div>
      </div>
      <div
        className="Box-root Typography-root Typography-bodyCopy Typography-colorTextPrimary ModerateCard-content CommentContent-root"
        dangerouslySetInnerHTML={
          Object {
            "__html": "This is the last random sentence I will be writing and I am going to stop mid-sent",
          }
        }
      />
      <div
        className="ModerateCard-footer"
      >
        <div
          className="Box-root HorizontalGutter-root HorizontalGutter-full"
        >
          <div>
            <a
              className="TextLink-root ModerateCard-link"
              href="http://localhost/comment/0"
              target="_blank"
            >
              View Context
              <span
                aria-hidden="true"
                className="Icon-root Icon-xs TextLink-icon"
              >
                open_in_new
              </span>
            </a>
          </div>
          <div
            className="Box-root HorizontalGutter-root HorizontalGutter-double"
          >
            <div
              className="Box-root Flex-root Flex-flex"
            >
              <div
                className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
              >
                <span
                  className="Marker-root Marker-colorError Marker-variantRegular"
                >
                  <span>
                    Spam
                  </span>

                  <span
                    className="Count-root"
                  >
                    2
                  </span>
                </span>
              </div>
              <button
                aria-controls="uuid-0"
                aria-expanded={false}
                className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Markers-detailsButtonColorRegular Button-variantRegular Markers-detailsButton"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                <span
                  className="Markers-detailsText"
                >
                  Details
                </span>
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-sm"
                >
                  arrow_drop_down
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ModerateCard-separator"
    />
    <div
      className="Box-root Flex-root ModerateCard-aside ModerateCard-asideWithoutReplyTo Flex-flex Flex-itemGutter Flex-alignCenter Flex-directionColumn gutter"
    >
      <div
        className="ModerateCard-decision"
      >
        Decision
      </div>
      <div
        className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
      >
        <button
          aria-label="Reject"
          className="BaseButton-root RejectButton-root RejectButton-invert"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
            className="Icon-root Icon-lg RejectButton-icon"
          >
            close
          </span>
        </button>
        <button
          aria-label="Approve"
          className="BaseButton-root ApproveButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
            className="Icon-root Icon-lg ApproveButton-icon"
          >
            done
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`single comment view renders single comment view 1`] = `
<div
  data-testid="single-moderate-container"
>
  <div
    className="SubBar-root SingleModerate-subBar SubBar-gutterBegin SubBar-gutterEnd"
  >
    <div
      className="Box-root Flex-root SubBar-container Flex-flex Flex-justifyCenter Flex-alignCenter"
    >
      <a
        className="SingleModerate-subBarBegin"
        href="/admin/moderate/"
        onClick={[Function]}
      >
        Go to moderation queues
      </a>
      <div
        className="SingleModerate-subBarTitle"
      >
        Single Comment View
      </div>
    </div>
  </div>
  <div
    className="SingleModerate-background"
  />
  <div
    className="MainLayout-root"
  >
    <main
      className="SingleModerate-main"
    >
      <div
        className="Box-root HorizontalGutter-root Queue-root HorizontalGutter-double"
      >
        <div
          className="Card-root ModerateCard-root"
          data-testid="moderate-comment-comment-0"
        >
          <div
            className="Box-root Flex-root Flex-flex"
          >
            <div
              className="ModerateCard-mainContainer"
            >
              <div
                className="ModerateCard-topBar"
              >
                <div>
                  <span
                    className="Box-root Typography-root Typography-heading4 Typography-colorTextPrimary ModerateCard-username Username-root"
                  >
                    Isabelle
                  </span>
                  <time
                    className="Timestamp-root RelativeTime-root"
                    dateTime="2018-07-06T18:24:00.000Z"
                    title="2018-07-06T18:24:00.000Z"
                  >
                    2018-07-06T18:24:00.000Z
                  </time>
                  <button
                    className="BaseButton-root FeatureButton-root"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span>
                      Feature
                    </span>
                  </button>
                </div>
              </div>
              <div
                className="Box-root Typography-root Typography-bodyCopy Typography-colorTextPrimary ModerateCard-content CommentContent-root"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "This is the last random sentence I will be writing and I am going to stop mid-sent",
                  }
                }
              />
              <div
                className="ModerateCard-footer"
              >
                <div
                  className="Box-root HorizontalGutter-root HorizontalGutter-full"
                >
                  <div>
                    <a
                      className="TextLink-root ModerateCard-link"
                      href="http://localhost/comment/0"
                      target="_blank"
                    >
                      View Context
                      <span
                        aria-hidden="true"
                        className="Icon-root Icon-xs TextLink-icon"
                      >
                        open_in_new
                      </span>
                    </a>
                  </div>
                  <div
                    className="Box-root HorizontalGutter-root HorizontalGutter-double"
                  >
                    <div
                      className="Box-root Flex-root Flex-flex"
                    >
                      <div
                        className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
                      >
                        <span
                          className="Marker-root Marker-colorError Marker-variantRegular"
                        >
                          <span>
                            Spam
                          </span>

                          <span
                            className="Count-root"
                          >
                            2
                          </span>
                        </span>
                      </div>
                      <button
                        aria-controls="uuid-0"
                        aria-expanded={false}
                        className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Markers-detailsButtonColorRegular Button-variantRegular Markers-detailsButton"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        onTouchEnd={[Function]}
                        type="button"
                      >
                        <span
                          className="Markers-detailsText"
                        >
                          Details
                        </span>
                        <span
                          aria-hidden="true"
                          className="Icon-root Icon-sm"
                        >
                          arrow_drop_down
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ModerateCard-separator"
            />
            <div
              className="Box-root Flex-root ModerateCard-aside ModerateCard-asideWithoutReplyTo Flex-flex Flex-itemGutter Flex-alignCenter Flex-directionColumn gutter"
            >
              <div
                className="ModerateCard-decision"
              >
                Decision
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
              >
                <button
                  aria-label="Reject"
                  className="BaseButton-root RejectButton-root"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    className="Icon-root Icon-lg RejectButton-icon"
                  >
                    close
                  </span>
                </button>
                <button
                  aria-label="Approve"
                  className="BaseButton-root ApproveButton-root"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    className="Icon-root Icon-lg ApproveButton-icon"
                  >
                    done
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`tab bar renders tab bar (empty queues) 1`] = `
<div
  className="SubBar-root"
  data-testid="moderate-tabBar-container"
>
  <div
    className="Box-root Flex-root SubBar-container Flex-flex Flex-justifyCenter Flex-alignCenter"
  >
    <nav
      className="Navigation-root"
    >
      <ul
        className="Navigation-ul"
      >
        <li
          className="NavigationItem-root"
        >
          <a
            className="NavigationItem-anchor NavigationItem-active"
            href="/admin/moderate/reported"
            onClick={[Function]}
          >
            <span
              aria-hidden="true"
              className="Icon-root Icon-sm"
            >
              flag
            </span>
            <span>
              reported
            </span>
            <span
              className="Counter-root Counter-colorInherit"
              data-testid="moderate-navigation-reported-count"
            >
              <span
                className="Counter-text"
              >
                0
              </span>
            </span>
          </a>
        </li>
        <li
          className="NavigationItem-root"
        >
          <a
            className="NavigationItem-anchor"
            href="/admin/moderate/pending"
            onClick={[Function]}
          >
            <span
              aria-hidden="true"
              className="Icon-root Icon-sm"
            >
              access_time
            </span>
            <span>
              Pending
            </span>
            <span
              className="Counter-root Counter-colorInherit"
              data-testid="moderate-navigation-pending-count"
            >
              <span
                className="Counter-text"
              >
                0
              </span>
            </span>
          </a>
        </li>
        <li
          className="NavigationItem-root"
        >
          <a
            className="NavigationItem-anchor"
            href="/admin/moderate/unmoderated"
            onClick={[Function]}
          >
            <span
              aria-hidden="true"
              className="Icon-root Icon-sm"
            >
              forum
            </span>
            <span>
              unmoderated
            </span>
            <span
              className="Counter-root Counter-colorInherit"
              data-testid="moderate-navigation-unmoderated-count"
            >
              <span
                className="Counter-text"
              >
                0
              </span>
            </span>
          </a>
        </li>
        <li
          className="NavigationItem-root"
        >
          <a
            className="NavigationItem-anchor"
            href="/admin/moderate/rejected"
            onClick={[Function]}
          >
            <span
              aria-hidden="true"
              className="Icon-root Icon-sm"
            >
              cancel
            </span>
            <span>
              rejected
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;
